Token cleaning feature
Utilizing task scheduling to perform cleaning of old tokens from the database by using endpoints for task scheduling (admin rights) and calling a method to clean old tokens (API key)
